# playground

./: .gitignore  README.md
c++/: run.cmd
c++/src/: main.cpp
html/: index.html  some.js
nodejs/: package.json  pnpm-lock.yaml
nodejs/src/: index.js
python/: main.py  run.cmd
rust-wasm-webgl/: Cargo.toml  build.cmd  index.html
rust-wasm-webgl/src/: console.rs  error.rs  js_loop.rs  lib.rs
rust-wasm-webgl/src/gl/: buffer.rs  mesh.rs  mod.rs  program.rs  shaders.rs  vao.rs
rust/src/: main.rs
solidjs/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
solidjs/src/: main.tsx  style.sass
static-svelte/: package.json  pnpm-lock.yaml  svelte.config.js
static-svelte/src/: global_style.css
static-svelte/src/routes/: +layout.svelte
wasm/rust/: Cargo.toml
wasm/rust/src/: lib.rs
wasm/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
wasm/web/src/: bench.ts  main.ts
